--- a/playertest/hello.html
+++ b/playertest/hello.html
@@ -22,10 +22,11 @@ THE SOFTWARE.
 -->
 <head>
   <title>prtio</title>
-  <script src="jquery-1.5.1.min.js"></script>
+  <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/swfobject/2.2/swfobject.js"></script>
   <script src="token.js"></script>
   <script src="hello.js"></script>
+  <script src="rdio-utils.js"></script>
   <style type="text/css">
     #freq div {
       height: 10px;
@@ -55,9 +56,17 @@ THE SOFTWARE.
 <button id="previous">Previous</button>
 <button id="next">Next</button><br>
 <input id="queue_key" value="000000000"><button id="queue">Queue</button>
+<d1>
+  <dt>Next Song:</dt>
+  <dd id = "nextsong"></dd>
+  <dt>album</dt>
+  <dd id="nextalbum"></dd>
+  <dt>artist</dt>
+  <dd id="nextartist"></dd>
+  <dd><img src="" id="nextart"></dd>
+</dl>
 
-
-<div id="freq">
+<div>
   <div></div>
   <div></div>
   <div></div>
